[project]
name = "researchproject"
version = "0.1.0"
description = "Quantifying Equilibrium Climate Sensitivity via a 0D Energy Balance Model"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
]
